@@ -12,7 +12,7 @@ use Travel::Routing::DE::VRR;
 use Exception::Class;
 use Getopt::Long qw/:config no_ignore_case/;
 
-our $VERSION = '2.00';
+our $VERSION = '2.01';
 my $ignore_info = 'Fahrradmitnahme';
 my $efa;
 my ( @from, @to, @via, $from_type, $to_type, $via_type );
@@ -259,7 +259,7 @@ efa - unofficial efa.vrr.de command line client
 
 =head1 VERSION
 
-version 2.00
+version 2.01
 
 =head1 DESCRIPTION
 
@@ -310,6 +310,10 @@ Exclude I<transports> (comma separated list).
 
 Possible transports: zug, s-bahn, u-bahn, stadtbahn, tram, stadtbus, regionalbus,
 schnellbus, seilbahn, schiff, ast, sonstige
+
+=item B<-E>|B<--extended-info>
+
+Display duration, ticket class and price for each route (if available)
 
 =item B<-m>|B<--max-change> I<number>
 
@@ -406,8 +410,19 @@ None.
 
 =head1 DEPENDENCIES
 
-This script requires perl 5.10 (or higher) with the XML::LibXML module
-installed.
+This script requires perl 5.10 (or higher) with the following modules:
+
+=over
+
+=item * Class::Accessor
+
+=item * Exception::Class
+
+=item * LWP::UserAgent
+
+=item * XML::LibXML
+
+=back
 
 =head1 BUGS AND LIMITATIONS
 
